--- a/style.css
+++ b/style.css
@@ -20,3 +20,18 @@
   background-color: yellow;
   color:black;
 }
+
+.card-body {
+  background-color: cornflowerblue;
+  color: white;
+  max-width: 200px;
+  margin: .3em;
+  border-radius: 10px;
+
+}
+
+.flex {
+  display: flex;
+
+}
+
